# main.py
@@ -9,8 +9,10 @@ from Src.Dto.filter import filter_model
 
 from Src.Core.format_reporting import format_reporting
 from Src.Core.custom_exceptions import custom_exceptions
+from Src.Core.comparison_format import comparison_format
 
 from Src.Reports.report_factory import report_factory
+from Src.logic.nomenclature_prototype import nomenclature_prototype
 
 app = connexion.FlaskApp(__name__)
 app.add_api("swagger.yaml")
@@ -22,14 +24,56 @@ receipt = receipt_book_menager()
 start = start_service(reposity, manager, receipt)
 
 start.create(".")
-filter = filter_model()
 
 
-@app.route("/filter/", methods=["POST"])
-def filter():
-    filter.name = "" if request.args.get('name') is None else request.args.get('name')
-    filter.id = "" if request.args.get('id') is None else request.args.get('id')
-    return f"filter(name={filter.name}; id={filter.id})"
+@app.route("/api/reports/comparison_formats", methods=['GET'])
+def c_formats():
+    return comparison_format.list()
+
+
+@app.route("/api/reports/model_names", methods=['GET'])
+def model_names():
+    return data_reposity.keys()
+
+
+@app.route("/app/reports/<entity>", methods=["POST"])
+def filter_with_filter(entity: str):
+    custom_exceptions.type(entity, str)
+    if entity not in data_reposity.keys():
+        raise custom_exceptions.other_exception("Некорректно указан тип данных! См метод /api/report/entities")
+
+    req = request.json
+    custom_exceptions.type(req, dict)
+    for i in ["field", "comparison_format", "value"]:
+        if i not in list(req.keys()):
+            raise custom_exceptions.other_exception("Некорректно указан формат отчета! См метод /api/report/formats")
+
+    filter = filter_model()
+    if req['field'] == "name":
+        filter.name = req['value']
+        filter.formats.name = comparison_format(req["comparison_format"])
+    if req['field'] == "id":
+        filter.id = req['value']
+        filter.formats.id = comparison_format(req["comparison_format"])
+
+    data = reposity.data[entity]
+    if type(data) == dict:
+        dd = list()
+        for i in list(data.keys()):
+            dd.append(data[i])
+        data = dd
+
+    prototype = nomenclature_prototype(data)
+    result = prototype.create(data, filter)
+
+    factory = report_factory(manager.settings)
+    report = factory.create_default
+    report.create(result.data)
+    if report is None:
+        raise custom_exceptions.other_exception("Невозможно подобрать корректный отчет согласно параметрам!")
+
+    report.create(result.data)
+    return report.result
 
 
 """
